--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <script src="js/background.js"></script>
+    <script src="js/popup.js"></script>
+    <div id="wrapper"></div>
 
     
 </body>
