--- a/fl.html
+++ b/fl.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-us" class=" styleguide">
 <head>
@@ -1024,7 +1025,23 @@
 
       <img src="https://sb.scorecardresearch.com/b?c1=2&c2=7241469&c3=&c4=www.flickr.com%2F&c5=792600147&c6=&c15=&cv=1.3&cj=1" style="display:none" width="0" height="0" alt="" />
     </noscript>
+<script>
+var dsa;
+$("#activityFeed").each(function() {
+  var asd = $('ul.photo-engagement');
+   dsa = asd;
 
+  
+
+console.log(dsa);
+  });
+$(dsa).append('<li><p>S</p></li>');
+/*$( init );
+
+function init() {
+  $('#myDiv').html('<h2>Новый заголовок</h2><p>Новый текст, который содержит <a href="#">другую ссылку</a>.</p>');
+}*/
+</script>
 
   </body>
   </html>
